# hgdata

./: .hgignore  .travis.yml  LICENSE  README.md  TODO.md  handa-gdata.cabal  quickstart.hs
src/: Main.hs
src/Crypto/: GnuPG.hs  MD5.hs
src/Data/ByteString/: Util.hs
src/Data/List/: Util.hs
src/Network/: Google.hs
src/Network/Google/: Bookmarks.hs  Books.hs  Contacts.hs  FusionTables.hs  OAuth2.hs  Picasa.hs  Storage.hs
src/Network/Google/Storage/: Encrypted.hs  Sync.hs
