name: handa-gdata
version: 0.0.2
cabal-version: >=1.2
build-type: Simple
license: AllRightsReserved
license-file: ""
description:  
data-dir: ""
 
executable hgdata
    build-depends: HTTP -any, base -any, base64-bytestring -any,
                   binary -any, bytestring -any, case-insensitive -any, cmdargs -any,
                   directory -any, filepath -any, http-conduit -any, json -any,
                   process -any, pureMD5 -any, resourcet -any, text -any, time -any,
                   xml -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: Network.Google Network.Google.Contacts
                   Network.Google.Storage Network.Google.OAuth2
                   Network.Google.Storage.Encrypted Network.Google.Storage.Sync
                   Crypto.GnuPG Crypto.MD5 Data.ByteString.Util Data.List.Util
 