name: handa-gdata
version: 0.1.0
cabal-version: >=1.2
build-type: Simple
license: MIT
license-file: LICENSE
copyright: (c) 2012-13 Brian W Bush
maintainer: Brian W Bush <b.w.bush@acm.org>
stability: Stable
homepage: http://code.google.com/p/hgdata
package-url: http://code.google.com/p/hgdata/downloads/list
bug-reports: http://code.google.com/p/hgdata/issues/entry
synopsis: Library and command-line utility for accessing Google services and APIs.
description: This package provides access to the following Google APIs:
             * Google Contacts <https://developers.google.com/google-apps/contacts/v3/>
             * Google Storage <https://developers.google.com/storage/docs/developer-guide>
category: Network
author: Brian W Bush <b.w.bush@acm.org>
data-dir: ""
 
source-repository head
    type: mercurial
    location: https://code.google.com/p/hgdata/
 
executable hgdata
    build-depends: HTTP -any, base -any, base64-bytestring -any,
                   binary -any, bytestring -any, case-insensitive -any, cmdargs -any,
                   directory -any, filepath -any, http-conduit -any, json -any,
                   old-locale -any, process -any, pureMD5 -any, regex-posix -any,
                   resourcet -any, text -any, time -any, unix -any, xml -any
    main-is: Main.hs
    buildable: True
    hs-source-dirs: src
    other-modules: Network.Google Network.Google.Contacts
                   Network.Google.Storage Network.Google.OAuth2
                   Network.Google.Storage.Encrypted Network.Google.Storage.Sync
                   Crypto.GnuPG Crypto.MD5 Data.ByteString.Util Data.List.Util
 